--- a/src/Makefile
+++ b/src/Makefile
@@ -1,2 +1,23 @@
 all :
-	gcc *.c ../needs/gnl/*.c ../needs/libft/*.c -D BUFFER_SIZE=1
+	gcc *.c ../needs/gnl/*.c ../needs/libft/*.c
+
+# NAME =	pipex.a
+# SRCS =	*.c\
+# 		../needs/gnl/*.c\
+# 		../needs/libft/*.c
+# OBJS =	*.o
+# NAME = pipex.a
+
+
+
+# all	:	${NAME}
+
+# ${NAME} :	toObject
+# 	gcc ${OBJS} -o a.out
+
+
+# toObject :
+# 	gcc ${SRCS} -c
+
+# clean :
+# 	rm ${OBJS} *.out	
